<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".mvp.ui.activity.SplashActivity"
    android:background="@color/theme_color">

    <TextView
        android:id="@+id/tv_skip"
        tools:text="@string/sys_skip_hint"
        android:textSize="@dimen/text_small"
        android:textColor="#d1ffffff"
        android:background="@drawable/bg_skip"
        android:layout_margin="@dimen/dp_10"
        android:paddingLeft="@dimen/dp_10"
        android:paddingRight="@dimen/dp_10"
        android:paddingTop="@dimen/dp_5"
        android:paddingBottom="@dimen/dp_5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/iv_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/iv_ad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/ll_containerr"/>
    
    <RelativeLayout
        android:id="@+id/ll_containerr"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_120"
        android:background="@android:color/white">
        <RelativeLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_logo"
                android:src="@mipmap/app_icon"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60" />
            <TextView
                android:id="@+id/tv_name"
                tools:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_xxlarge"
                android:layout_toRightOf="@+id/iv_logo"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tv_des"
                tools:text="@string/app_des"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_large"
                android:layout_toRightOf="@+id/iv_logo"
                android:layout_below="@+id/tv_name"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>